@@ -23,7 +23,6 @@
 
 /*
  * @test
- * @enablePreview
  * @bug 8269335
  * @summary Tests JSVML shared library is loaded successfully.
  * @modules jdk.incubator.vector
@@ -63,7 +62,7 @@ public class LoadJsvmlTest {
     public static void main(String... args) throws Exception {
         ProcessBuilder pb = ProcessTools.createJavaProcessBuilder(
             "-Xmn8m", "-Xlog:library=info",
-            "--add-modules=jdk.incubator.vector", "--enable-preview",
+            "--add-modules=jdk.incubator.vector",
             VectorTest.class.getName());
 
         OutputAnalyzer output = new OutputAnalyzer(pb.start());
